Fixed overflow problem in examble block

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -128,7 +128,7 @@
 /* Text */
 
 .advantages__text {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   align-self: center;
 
   &:last-child {
